Inline icon overlaps field value for comboBox, entityPicker (fix) jmix-framework/jmix#984
(cherry picked from commit 9b84af44494d38ed5412f6d3762a019603aaeffc)

--- a/jmix-ui/ui-themes/src/main/resources/halo/components/suggestionfield/suggestionfield.scss
+++ b/jmix-ui/ui-themes/src/main/resources/halo/components/suggestionfield/suggestionfield.scss
@@ -36,6 +36,10 @@ $jmix-suggestionfield-edit-color: scale-color(lighten($v-focus-color, 35%), $sat
       height: $v-unit-size--huge;
       line-height: normal;
     }
+
+    &.inline-icon {
+      padding-left: $v-unit-size;
+    }
   }
 
   .#{$primary-stylename}-error {
